2012-02-24  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (CLEANFILES): Move %_dis.h to...
	(MAINTAINERCLEANFILES): here.

2012-01-21  Ulrich Drepper  <drepper@gmail.com>

	* i386_disasm.c (ADD_NSTRING): Define.
	(i386_disasm): Print color codes in the appropriate places.

2011-10-16  Roland McGrath  <roland@hack.frob.com>

	* Makefile.am (libcpu_i386_a_SOURCES): Add i386_dis.h.
	(libcpu_x86_64_a_SOURCES): Add x86_64_dis.h.
	(i386_disasm.o, x86_64_disasm.o): Depend on those in $(srcdir).
	(%_dis.h): Renamed target pattern to ...
	($(srcdir)/%_dis.h): ... this.
	(noinst_HEADERS, noinst_PROGRAMS): Put under [MAINTAINER_MODE].

2010-08-16  Roland McGrath  <roland@redhat.com>

	* Makefile.am (%_defs): New pattern rule.
	(%_dis.h, %.mnemonics): Define as pattern rules using %_defs input.
	(CLEANFILES): Include all those files.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

2009-04-14  Roland McGrath  <roland@redhat.com>

	* Makefile.am (AM_CFLAGS): Add -fdollars-in-identifiers; it is not the
	default on every machine.

2009-01-23  Roland McGrath  <roland@redhat.com>

	* Makefile.am (i386_parse_CFLAGS): Use quotes around command
	substitution that can produce leading whitespace.

2009-01-01  Ulrich Drepper  <drepper@redhat.com>

	* i386_parse.y (instrtable_out): Optimize match_data table by not
	emitting 0xff masks for leading bytes.
	* i386_disasm.c (i386_disasm): Adjust reader of match_data.

	* i386_disasm.c (i386_disasm): Reset bufcnt when not matched.  We
	don't expect snprintf to fail.

2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add dppd, dpps, insertps, movntdqa, mpsadbw, packusdw,
	pblendvb, pblendw, pcmpeqq, pcmpestri, pcmpestrm, pcmpistri, pcmpistrm,
	pcmpgtq, phminposuw, pinsrb, pinsrd, pmaxsb, pmaxsd, pmaxud, pmaxuw,
	pminsb, pminsd, pminud, pminuw, pmovsxbw, pmovsxbd, pmovsxbq, pmovsxwd,
	pmovsxwq, pmovsxdq, pmovzxbw, pmovzxbd, pmovzxbq, pmovzxwd, pmovzxwq,