@@ -1,3 +1,7 @@
+2012-06-26  Roland McGrath  <roland@hack.frob.com>
+
+	* Makefile.am [!MAINTAINER_MODE] ($(srcdir)/%_dis.h): New rule.
+
 2012-02-24  Mark Wielaard  <mjw@redhat.com>
 
 	* Makefile.am (CLEANFILES): Move %_dis.h to...
